--- a/pr02.html
+++ b/pr02.html
@@ -128,7 +128,7 @@ style="width:100%; border-radius:5px;">
 <!--Создаём столбец-->
 <th>
 <h3>Информация о создателе:</h3>
-<h4 style="text-indent:20px" >Сайт создан ученицей 10"Б" класса: Ксенией Куница.
+<h4 style="text-indent:20px" >Сайт создан ученицей 10"Б" класса.
 <br>Электоронная почта для связи: kksusha@mail.ru.</h4>
 <!--Закрываем таблицу подвала. При желании в подвале можно
 сделать несколько строк и столбцов-->
